<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/naturegreen2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dim10"
    tools:context="com.example.android.zoology.MainActivity">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim26"
        card_view:cardCornerRadius="@dimen/dim16"
        card_view:cardElevation="@dimen/dim16">

        <!--scroll view-->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/scrollbackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dim40"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/Quiz_title"
                        style="@style/title_quiz" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/lion" />
                </LinearLayout>

                <EditText
                    android:id="@+id/insert_name"
                    android:hint="@string/Type_your_name_hint"
                    style="@style/participant_name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/arrow" />

                <!--First Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question1"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textq1label"
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_1_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_1_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_q1_answer"
                    style="@style/AnswerCard">

                    <RadioGroup
                        android:id="@+id/radio_group_q1"
                        style="@style/RadioGroup"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_q1_a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_a1_text" />

                        <RadioButton
                            android:id="@+id/radio_q1_a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_a2_text" />

                        <RadioButton
                            android:id="@+id/radio_q1_a3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_a3_text" />

                        <RadioButton
                            android:id="@+id/radio_q1_a4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_a4_text" />
                    </RadioGroup>
                </android.support.v7.widget.CardView>

                <!--second Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question2"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textq2label"
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_2_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_2_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_q2_answer"
                    style="@style/AnswerCard">

                    <RadioGroup
                        android:id="@+id/radio_group_q2"
                        style="@style/RadioGroup"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_q2_a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q2_a1_text" />

                        <RadioButton
                            android:id="@+id/radio_q2_a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q2_a2_text" />

                        <RadioButton
                            android:id="@+id/radio_q2_a3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q2_a3_text" />

                        <RadioButton
                            android:id="@+id/radio_q2_a4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q2_a4_text" />
                    </RadioGroup>
                </android.support.v7.widget.CardView>

                <!--third Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question3"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textq3label"
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_3_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_3_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_q3_answer"
                    style="@style/AnswerCard">

                    <RadioGroup
                        android:id="@+id/radio_group_q3"
                        style="@style/RadioGroup"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_q3_a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_a1_text" />

                        <RadioButton
                            android:id="@+id/radio_q3_a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_a2_text" />

                        <RadioButton
                            android:id="@+id/radio_q3_a3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_a3_text" />

                        <RadioButton
                            android:id="@+id/radio_q3_a4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_a4_text" />
                    </RadioGroup>
                </android.support.v7.widget.CardView>

                <!--fourth Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question4"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textq4label"
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_4_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_4_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_q4_answer"
                    style="@style/AnswerCard">

                    <RadioGroup
                        android:id="@+id/radio_group_q4"
                        style="@style/RadioGroup"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_q4_a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_a1_text" />

                        <RadioButton
                            android:id="@+id/radio_q4_a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_a2_text" />

                    </RadioGroup>
                </android.support.v7.widget.CardView>

                <!--fifth Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question5"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_5_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_5_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_q5_answer"
                    style="@style/AnswerCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox_q5_a1"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q5_a1_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q5_a2"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q5_a2_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q5_a3"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q5_a3_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q5_a4"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q5_a4_text" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--sixth Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question6"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_6_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_6_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_q6_answer"
                    style="@style/AnswerCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox_q6_a1"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q6_a1_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q6_a2"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q6_a2_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q6_a3"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q6_a3_text" />

                        <CheckBox
                            android:id="@+id/checkbox_q6_a4"
                            style="@style/Answers2or3Options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q6_a4_text" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--seventh Question and answer -->

                <android.support.v7.widget.CardView
                    android:id="@+id/card_question7"
                    style="@style/QuestionCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/q3label"
                            style="@style/TextViewQuestionLabel"
                            android:text="@string/question_7_label" />

                        <TextView
                            style="@style/TextViewQuestion"
                            android:text="@string/question_7_text" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_q7_answer"
                    style="@style/AnswerCard">

                    <LinearLayout
                        style="@style/LinearLayoutQuestionAnswer"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/text_answer_q7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/q7_text_hint"
                            android:inputType="text"
                            android:lines="1"
                            android:maxLines="1" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                 <!--android:onClick="onClickSubmit"-->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dim16"
                    android:background="@drawable/button"
                    android:onClick="onClickSubmit"
                    android:text="@string/submit_button_text"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>